fixed video spacing for smaller screens

--- a/styles/extras.css
+++ b/styles/extras.css
@@ -88,13 +88,6 @@ body {
     background-attachment: fixed;
 }
 
-
-/* .nav-container {
-    background-color: #A6808C;
-    border-radius: 5px;
-     
-}
-
 /* Main Containers */
 
 .video-container,
@@ -205,6 +198,7 @@ border: 0;
 
 .videoBox {
     overflow: hidden;
+    margin-top: 10px;
 }
 
 .resp-iframe {
@@ -252,17 +246,4 @@ border: 0;
 
     }
 
-    /* .videoLink {
-        display: flex;
-        flex-direction: column;
-        padding: 5px;
-        margin-top: 30px;
-        box-shadow: 5px 5px 20px black;
-        width: 448px;
-        height: 272px;
-        position: relative;
-        z-index: 0;
-    } */
-    
-    
 }
